--- a/Manuscript Analyses/manuscript_analysis.Rmd
+++ b/Manuscript Analyses/manuscript_analysis.Rmd
@@ -56,7 +56,7 @@ data <- rio::import("cleaned_data.csv")
 ```
 
 
-First, pretest and posttest intelligibility was calculated as percent words correct (pwc) for each listener. 
+First, pretest and posttest intelligibility was calculated as a percent words correct (pwc) score for each listener. Pretest PWC and PWC change (posttest-pretest) will be our outcome variables for the analyses.
 
 
 ```{r, warning = F, message = F}
@@ -105,7 +105,7 @@ rm(age, data)
 
 ## Participant Demographics
 
-A total of 60 older adult listeners participated in the study. The overall demographic information for the participants are below. 
+A total of 60 older adult listeners participated in the study. The overall demographic information for the participants are in the table below. 
 
 ```{r}
 
@@ -265,6 +265,8 @@ The correlation matricies between all the cognitive measures, hearing threshold,
 
 ### AM1
 
+Words in noise significantly correlated with pretest intelligibility for AM1 at the alpha = 0.05 level. Listeners with higher (i.e. worse) words in noise hearing thresholds tend to have lower pretest intelligibility (i.e. lower initial intelligibility) for AM1.
+
 ```{r, warning = F, message = F}
 
 # Customize plot colors
@@ -293,7 +295,6 @@ AM1_cor <- cor_df %>%
     outline.col = "white",
     colors = c(my_pal[1], "white", my_pal[15]),
     lab = TRUE,
-    sig.level = 0.05,
     insig = "blank",
     title = "Ataxic", 
     legend.title = "Correlation"
@@ -303,7 +304,43 @@ AM1_cor
 
 ```
 
+The plot below shows only the significant correlations in the matrix above for AM1.
+
+```{r, warning = F, message = F}
+
+cor_df %>%
+  dplyr::filter(speaker == "AM1") %>%
+  dplyr::select(!c(id, speaker, fluid_cog_c, posttest)) %>%
+  dplyr::rename(
+    `Working Memory` = list_sort_c,
+    `Inhibitory Control` = flanker_c,
+    `Cognitive Flexibility` = card_sort_c,
+    `Receptive Vocabulary` = vocab_c,
+    `Processing Speed` = pattern_c,
+    `Picture Sequence Memory` = pic_seq_c,
+    `Words in Noise Threshold` = best_win
+  ) %>%
+  dplyr::rename_all(snakecase::to_title_case) %>%
+  cor(use = "pairwise.complete.obs") %>%
+  ggcorrplot(
+    type = "lower",
+    outline.col = "white",
+    colors = c(my_pal[1], "white", my_pal[15]),
+    lab = TRUE,
+    p.mat = cor_pmat(.),
+    sig.level = 0.05,
+    insig = "blank",
+    title = "Ataxic", 
+    legend.title = "Correlation"
+  )
+
+```
+
+
+
 ### PDM10
+
+Like AM1, words in noise hearing threshold significantly correlated with pretest intelligibility. However, listener processing speed has a weak, but significant, correlation with intelligibility improvement. Pretest intelligibility is also has a negative correlation with intelligibility improvement, indicating that listeners in this group who had higher pretest intelligibility tend to have less intelligibility gains at posttest.
 
 ```{r, warning = F, message = F}
 
@@ -336,7 +373,40 @@ PDM10_cor
 
 ```
 
-```{r, echo = F, warning = F, message = F}
+The plot below only shows the significant correlations for PDM10.
+
+```{r}
+
+cor_df %>%
+  dplyr::filter(speaker == "PDM10") %>%
+  dplyr::select(!c(id, speaker, fluid_cog_c, posttest)) %>%
+  dplyr::rename(
+    `Working Memory` = list_sort_c,
+    `Inhibitory Control` = flanker_c,
+    `Cognitive Flexibility` = card_sort_c,
+    `Receptive Vocabulary` = vocab_c,
+    `Processing Speed` = pattern_c,
+    `Picture Sequence Memory` = pic_seq_c,
+    `Words in Noise Threshold` = best_win
+  ) %>%
+  dplyr::rename_all(snakecase::to_title_case) %>%
+  cor(use = "pairwise.complete.obs") %>%
+  ggcorrplot(
+    type = "lower",
+    outline.col = "white",
+    colors = c(my_pal[1], "white", my_pal[15]),
+    lab = TRUE,
+    p.mat = cor_pmat(.),
+    insig = "blank",
+    sig.level = 0.05,
+    title = "Parkinson's Disease", 
+    legend.title = "Correlation"
+  )
+
+```
+
+
+```{r, eval = F, warning = F, message = F}
 
 library(patchwork)
 AM1_cor + PDM10_cor + plot_layout(guides = "collect") & theme(legend.position = "bottom")
